修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -5,41 +5,85 @@ date:   2019-05-17 21:12
 categories: 办公
 ---
 
-这里只做记录，还是使用对比中，所以有的软件功能重复。
+> 时间截至：2019.11.24
+> 注：部分软件可能需要搭梯子
 
-注：部分软件可能需要搭梯子
+## [小书匠](http://soft.xiaoshujiang.com/) 
+**收费：** ￥40/年
+**用例：** 编写技术文档和博客文章，Markdown语法，可导出为PDF或同步到Github上。
 
-* 小书匠
- [http://soft.xiaoshujiang.com/](http://soft.xiaoshujiang.com/)
+## [为知笔记](https://www.wiz.cn/zh-cn) 
+ 
+**收费：** ￥60/年
+**用例：**
+ - 多端同步功能， 临时编写文档和一些资料。  
+ - 作为个人笔记使用  
+ - 日历功能，记录每天的工作内容和个人活动，相当于写日记了。  
 
-* Yu Writer：编写技术文档
- [https://ivarptr.github.io/yu-writer.site/](https://ivarptr.github.io/yu-writer.site/)
+## [Drawio](https://www.draw.io/)
+ 
+在**help**菜单下，点击**Download drwa.io Desktop**下载本地版。
+ 
+**收费：** 开源免费
+**用例：** 编辑一些流程图和简单图表。小书匠软件内置了Drawio，但实际使用会卡，还是单独使用再导入为好。
+ 
+## [PicPick](https://picpick.app/zh/)
+ 
+**收费：** 个人免费
+**用例：** 电脑截图，有着强大的编辑功能，平时也作为简单图片编辑使用。
 
-* Google Keep：记录工作内容
- [https://www.google.com/keep/](https://www.google.com/keep/)
 
-* Visual studio 程序编写(社区版)
- [https://visualstudio.microsoft.com/zh-hans/free-developer-offers/](https://visualstudio.microsoft.com/zh-hans/free-developer-offers/)
+## [ScreenToGif](https://www.screentogif.com/?l=zh_cn)
+ 
+**收费：** 开源免费
+**用例：** 录屏。可以通过屏幕，摄像头和白板三种方式录制视频，可保存为GIF和avi。有着强大的编辑功能，平时主要作为GIF动画录制，嵌入到文章内。
 
-* Drawio：做流程图即各种图
- [https://about.draw.io/](https://about.draw.io/)
+## [Everything](https://www.voidtools.com/zh-cn/)
+ 
+**收费：** 免费
+**用例：**  搜索电脑本地文件
 
-* PicPick：截图，
- [https://picpick.app/zh/](https://picpick.app/zh/)
+## [Meld](https://meldmerge.org/)
 
-* ScreenToGif：录屏和gif。
- [https://www.screentogif.com/?l=zh_cn](https://www.screentogif.com/?l=zh_cn)
+**收费：** 开源免费
+**用例：**  面向开发人员的可视化差异和合并工具。Meld可帮助您比较文件，目录和版本控制的项目。它提供文件和目录的双向和三向比较。
 
-* Everything：搜索文档，
- [https://www.voidtools.com/zh-cn/](https://www.voidtools.com/zh-cn/)
-
-* Meld：文档更改对比
- [http://meldmerge.org/](http://meldmerge.org/)
-
-* Zeal：各种程序语言API查询
+## [Zeal](https://zealdocs.org/)
+ 
+**收费：** 免费
+**用例：** 面向软件开发人员的脱机文档浏览器，各种程序语言API查询
  [https://zealdocs.org/](https://zealdocs.org/)
  
- - Pngyu：图片压缩
- - https://pngquant.org/
+## [Pngyu](https://pngquant.org/)
 
-- Infix PDF Editor：PDF编辑
+使用pngquant作为压缩引擎，该界面有很多基于该引擎的软件，个人测试**Pngyu**最好用。  
+该引擎缺点是只能压缩**png**格式图片，不过已经够用了。
+
+**收费：** 开源免费
+**用例：** png格式图片压缩，嵌入到博客文章里，提升加载速度。
+
+ ## [Visual studio](https://visualstudio.microsoft.com/zh-hans/free-developer-offers/) 
+ 
+**收费：** 社区版免费
+**用例：** 程序编写，最强IDE。	还有 **Visual Studio Code**。作为搞硬件的，这两款现在用的都比较少了，只作为平时学习语言和查看代码使用。
+
+## [Infix PDF Editor](https://www.iceni.com/ru/infix.htm)
+
+**收费：** $99/用户
+**用例：** PDF文件直接编辑，无需转换。我是试了很多软件才找到的，市面上很多所谓的编辑器是要先导出为Word等可编辑格式才能编辑，开源的也有但不好用。自行找破解吧，有钱了再支持。
+
+## 其他软件
+
+下面软件曾经使用过，都是很优秀的，只是不再适合自己现状，已被上述软件代替掉了。
+
+ - Yu Writer：编写文档
+ [https://ivarptr.github.io/yu-writer.site/](https://ivarptr.github.io/yu-writer.site/)
+
+ - Google Keep：日记
+ [https://www.google.com/keep/](https://www.google.com/keep/)
+
+
+
+
+
+
