修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -72,6 +72,16 @@ categories: 办公
 **收费：** $99/用户
 **用例：** PDF文件直接编辑，无需转换。我是试了很多软件才找到的，市面上很多所谓的编辑器是要先导出为Word等可编辑格式才能编辑，开源的也有但不好用。自行找破解吧，有钱了再支持。
 
+## [Krita](https://krita.org/zh/)
+
+**收费：** 开源免费
+**用例：** 专业绘画软件，代替Ps
+
+## [KiCad](http://www.kicad-pcb.org/)
+
+**收费：** 开源免费
+**用例：** EDA设计软件，代替AD
+
 ## 其他软件
 
 下面软件曾经使用过，都是很优秀的，只是不再适合自己现状，已被上述软件代替掉了。
