修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -82,6 +82,16 @@ categories: 办公
 **收费：** 开源免费
 **用例：** EDA设计软件，代替AD
 
+## [awesomescreenshot](http://www.awesomescreenshot.com/)
+
+**收费：** 免费，高级功能收费
+**用例：** 网页截图，Chrome浏览器插件；可以滚动截图，截图整个网页，保存为png和pdf格式。
+
+## [EdgeTranslate](https://github.com/EdgeTranslate/EdgeTranslate)
+
+**收费：** 开源免费
+**用例：** 网页翻译，选词翻译，重点是可以PDF翻译。Chrome浏览器插件。
+
 ## 其他软件
 
 下面软件曾经使用过，都是很优秀的，只是不再适合自己现状，已被上述软件代替掉了。
