修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -11,6 +11,9 @@ categories: 办公
 ## [小书匠](http://soft.xiaoshujiang.com/) 
 **收费：** ￥40/年
 **用例：** 编写技术文档和博客文章，Markdown语法，可导出为PDF或同步到Github上。
+**使用教程：** 
+[小书匠与Markdown语法使用手册-适配本博客](https://lonlypan.com/archivers/%E5%B0%8F%E4%B9%A6%E5%8C%A0%E8%AF%AD%E6%B3%95%E4%BD%BF%E7%94%A8%E6%89%8B%E5%86%8C)  
+[小书匠绑定第三方数据库](https://lonlypan.com/archivers/%E5%B0%8F%E4%B9%A6%E5%8C%A0%E7%BB%91%E5%AE%9A%E7%AC%AC%E4%B8%89%E6%96%B9%E6%95%B0%E6%8D%AE%E5%BA%93)
 
 ## [为知笔记](https://www.wiz.cn/zh-cn) 
  
@@ -31,7 +34,6 @@ categories: 办公
  
 **收费：** 个人免费
 **用例：** 电脑截图，有着强大的编辑功能，平时也作为简单图片编辑使用。
-
 
 ## [ScreenToGif](https://www.screentogif.com/?l=zh_cn)
  
