修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -19,8 +19,8 @@ categories: 办公
  
 **收费：** ￥60/年
 **用例：**
- - 多端同步功能， 临时编写文档和一些资料。  
- - 作为个人笔记使用  
+ - 多端同步功能，临时编写文档和一些资料。  
+ - 个人笔记
  - 日历功能，记录每天的工作内容和个人活动，相当于写日记了。  
 
 ## [Drawio](https://www.draw.io/)
@@ -28,12 +28,12 @@ categories: 办公
 在**help**菜单下，点击**Download drwa.io Desktop**下载本地版。
  
 **收费：** 开源免费
-**用例：** 编辑一些流程图和简单图表。小书匠软件内置了Drawio，但实际使用会卡，还是单独使用再导入为好。
+**用例：** 编辑一些流程图和简单图表。**小书匠**软件内置了Drawio，但实际使用会卡，还是单独使用再导入为好。
  
 ## [PicPick](https://picpick.app/zh/)
  
 **收费：** 个人免费
-**用例：** 电脑截图，有着强大的编辑功能，平时也作为简单图片编辑使用。
+**用例：** 电脑截图+编辑，有着强大的编辑功能，平时也作为简单图片编辑使用。
 
 ## [ScreenToGif](https://www.screentogif.com/?l=zh_cn)
  
@@ -54,7 +54,6 @@ categories: 办公
  
 **收费：** 免费
 **用例：** 面向软件开发人员的脱机文档浏览器，各种程序语言API查询
- [https://zealdocs.org/](https://zealdocs.org/)
  
 ## [Pngyu](https://pngquant.org/)
 
@@ -87,7 +86,7 @@ categories: 办公
 ## [awesomescreenshot](http://www.awesomescreenshot.com/)
 
 **收费：** 免费，高级功能收费
-**用例：** 网页截图，Chrome浏览器插件；可以滚动截图，截图整个网页，保存为png和pdf格式。
+**用例：** 网页截图，可以滚动截图，截图整个网页，保存为png和pdf格式。Chrome浏览器插件。
 
 ## [EdgeTranslate](https://github.com/EdgeTranslate/EdgeTranslate)
 
