修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -5,20 +5,29 @@ date:   2019-11-3  17:12
 categories: 随笔
 ---
 
+## 装备
+
+### 潜水深度
+
 海蛾号小潜艇，初造200水压深，初步升级300，最深900  
 海虾机甲，初造900水压深，初步升级1500，最深1700  
-独眼巨人号，初造500水压深，初步升级900，最深 未知（可能有2000~4000左右）
+独眼巨人号，初造500水压深，初步升级900，最深未知（可能有2000~4000左右）
 深海迷航，美丽水世界，世界总体最深5000米。  
 
-海蛾号出生地周围30水压深，800范围内碎片集齐，  
-海虾机甲全在极光号太空船里面集齐，  
-独眼巨人号（独眼脆皮号），30米到100米水压深的残骸处（100米以下没有）海藻森林底部，蘑菇森林（是蘑菇森林，不是蛇菇洞穴），极光号太空船里面，海上绿洲，恶魔岛下面，集齐  
+### 碎片搜集
+
+海蛾号：出生地周围30水压深，800范围内碎片集齐，  
+海虾机甲：全在极光号太空船里面集齐，  
+独眼巨人号（独眼脆皮号）：30米到100米水压深的残骸处（100米以下没有）海藻森林底部，蘑菇森林（是蘑菇森林，不是蛇菇洞穴），极光号太空船里面，海上绿洲，恶魔岛下面，集齐  
+
+### 装备强化
 
 初级强化潜艇，需要月亮池（停靠站）再建造载具升级控制台进行初步强化  
 独眼巨人号，直接在船内尾巴里面有专属工作台进行初步强化  
 高级强化潜艇能力和水压力，需要高级工作台，需要找到3个碎片蓝图100米到200米深的残骸处，（我不是很清楚，1处在库什区海域，1处在远古群山）应该是这2处
 如果这2处没有1个，寒骨森林（血油区）2号逃生舱的地方附近就绝对会有，在400到500米深的地方，但那里有电鳗和蟹鱿，谨慎！  
 
+## 物资
 如果非常缺乏资源，
 1寻找巨大珊瑚管，整个世界好像就3处，  
 2海底沙漠，常见矿物很多（没有稀有矿，小心骨鲨）（稀有矿物去恶魔岛水下山壁，1200米深的熔岩山丘寻找）  
