修改文件: _posts/2019-11-24-博客文章写作规范.md

--- a/_posts/2019-11-24-博客文章写作规范.md
+++ b/_posts/2019-11-24-博客文章写作规范.md
@@ -4,9 +4,86 @@ title:    "2019-11-24-博客文章写作规范"
 date:   2019-11-24  12:10 
 categories: 办公
 ---
+## 等待修改
+
+ - 主页文章显示内容数量
+ - 文章页面分割线删除
+ - 所有页面显示扩为全屏
 
 ## 著作权
 
+>本文作者： IIssNan
+本文链接： http://notes.iissnan.com/2015/something-about-next/
+版权声明： 本博客所有文章除特别声明外，均采用 CC BY-NC-SA 3.0 CN 许可协议。转载请注明出处！
+
+一、模板
+
+本站模板为全网首创，不允许任何形式的仿站、扒站或出售本站模板。
+
+二、文章
+
+凡在文首注明“本文为博主原创文章，未经博主允许不得转载”的均为不得转载的文章，如需转载，务必联系博主获得授权，转载文章需要在文首以加粗文字标注“本文转自魏义齐个人博客，如需转载请联系原作者获得授权”，同时文末需注明文章链接并加上超链；本站向他站投稿文章需在文首以加粗文字标注“本文来源魏义齐个人博客，如需转载请联系原作者获得授权”，同样文末需注明原文链接，是否加超链采取自愿。
+
+三、图片
+
+本站所有banner图归本博客版权所有，任何人不得盗取或使用相同设计布局。
+
+摄影作品凡在文首注明“本组图片为魏义齐个人拍摄，版权归魏义齐个人博客所有”，任何人不得以任何形式的转载或用于商业用途。
+
+以上声明项目如有违反必追究法律责任，且一追到底，另外，如因使用本站模板造成利益损失的，本站不承担任何法律责任；未经允许转载和抄袭文章的，如有版权公司告知侵权还请遵守法律。
+
+
+未经授权，不得全文转载。转载前请先阅读本站版权声明
+
+基本信息
+当前协议版本: 1.0
+作者: ADoyle
+权利人: ADoyle
+联系方式: adoyle.h@gmail.com
+
+版权声明
+本版权声明承袭著作权法，在此基础上额外声明以下规定。
+
+本网站的文字、图片、数据、用户评论及资料均受法律保护。
+
+本网站发表的全部原创内容（不仅限于文章、图片，包含文章评论），著作权均归其发表者所有。
+
+任何组织或个人未经作者授权许可，均不得以任何方式或理由全文转载以及全文复制；也不得修改、改编、盗链或制作镜像等。
+
+本网站允许非商业用途的部分转载以及部分摘录。部分定义为：被引用部分占原文内容（包含标点符号）的百分之五十以下。必须遵循此条限制下合理使用。
+
+任何转载与复制，都需要保证文字片段完整性，不可篡改文章内容（包括标题、时间、作者等信息）。同时必须注明文章作者以及来源地址。
+
+任何经过授权后，被引用、转载、复制的片段，不能授权给其他地方使用。禁止二次授权。
+
+授权许可
+对于商业用途：本人将通过邮件发送自签名的电子许可证书，用以标识许可真实性。该许可证书使用范围与期限根据具体情况而定。
+
+对于非商业用途：无需电子许可证书，只需遵循以上版权声明中的规定，即默认授予许可。
+
+付酬标准和办法
+请通过邮箱联系到本人，根据具体情况制定付酬标准。
+
+追责
+若发现有违反此版权声明的行为，本人将通过网络评论、邮件、电话、信件等方式联络到相关人员或组织。请在五个工作日之内联系到本人，协商如何处理该行为。
+
+如未及时回复或者未处理，本人将采取法律手段维护自身权益。
+
+免责声明
+文章评论属于其发表者所有，本人概不负责。
+
+网站被其他人恶意篡改，本人概不负责。
+
+协议修改
+本协议的任何修改将会在声明版本递增数字，以标识协议唯一性。
+
+之前的文章所使用的协议仍遵循修改前的对应版本，不受修改以后的影响。
+
+本文首发于戚名钰的博客，欢迎转载，但是必须保留本文的署名戚名钰（包含链接）。如您有任何商业合作或者授权方面的协商，请给我留言：qimingyu.security@foxmail.com
+
+
+版权声明：本文为CSDN博主「毕小宝」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/wojiushiwo945you/article/details/93164184
 
 ## 格式
 
