--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -5,34 +5,51 @@ date:   2019-11-3  17:12
 categories: 随笔
 ---
 
+## 缓存清理
+
+ **未测试**
+ 
+如果遇到游戏很卡，游戏里遇到地形BUG，或者想要一种资源但是都采集光了等问题都可以使用。
+
+方法如下：打开游戏目录`Subnautica/SNAppData/SavedGames/slot0000`(这个编号是你建立游戏存档的顺序，找到你玩的那个存档)，把`CellsCache`和`CompiledOctreesCache`两个文件夹里的内容都删了，文件夹保留，再进入到游戏会发现整个世界都跟新的一样，但是你自己造的建筑不会被刷新掉，海娥号，机甲，独眼巨人号也都在，采集的资源也在箱子里边存着，但你扔在野外的物品会消失。
+
 ## 装备
 
 ### 潜水深度
 
-海蛾号小潜艇，初造200水压深，初步升级300，最深900  
-海虾机甲，初造900水压深，初步升级1500，最深1700  
-独眼巨人号，初造500水压深，初步升级900，最深未知（可能有2000~4000左右）
-深海迷航，美丽水世界，世界总体最深5000米。  
+世界总体最深5000米。  
+
+**海蛾号：** 初造200水压深，初步升级300，最深900  
+**海虾机甲：** 初造900水压深，初步升级1500，最深1700  
+**独眼巨人号：** 初造500水压深，初步升级900，最深未知（可能有2000~4000左右）
 
 ### 碎片搜集
 
-海蛾号：出生地周围30水压深，800范围内碎片集齐，  
-海虾机甲：全在极光号太空船里面集齐，  
-独眼巨人号（独眼脆皮号）：30米到100米水压深的残骸处（100米以下没有）海藻森林底部，蘑菇森林（是蘑菇森林，不是蛇菇洞穴），极光号太空船里面，海上绿洲，恶魔岛下面，集齐  
+**海蛾号：** 出生地周围30水压深，800范围内碎片集齐，  
+**海虾机甲：** 全在极光号太空船里面集齐，  
+**独眼巨人号（独眼脆皮号）：** 30米到100米水压深的残骸处（100米以下没有）海藻森林底部，蘑菇森林（是蘑菇森林，不是蛇菇洞穴），极光号太空船里面，海上绿洲，恶魔岛下面，集齐  
 
 ### 装备强化
 
-初级强化潜艇，需要月亮池（停靠站）再建造载具升级控制台进行初步强化  
-独眼巨人号，直接在船内尾巴里面有专属工作台进行初步强化  
-高级强化潜艇能力和水压力，需要高级工作台，需要找到3个碎片蓝图100米到200米深的残骸处，（我不是很清楚，1处在库什区海域，1处在远古群山）应该是这2处
+**海蛾号，海虾机甲：** 需要月亮池，再建造载具升级控制台进行初步强化  
+**独眼巨人号：** 直接在船内尾巴里面有专属工作台进行初步强化  
+**高级强化：** 需要高级工作台，需要找到3个碎片蓝图100米到200米深的残骸处（1处在库什区海域，1处在远古群山）应该是这2处
 如果这2处没有1个，寒骨森林（血油区）2号逃生舱的地方附近就绝对会有，在400到500米深的地方，但那里有电鳗和蟹鱿，谨慎！  
 
 ## 物资
-如果非常缺乏资源，
-1寻找巨大珊瑚管，整个世界好像就3处，  
-2海底沙漠，常见矿物很多（没有稀有矿，小心骨鲨）（稀有矿物去恶魔岛水下山壁，1200米深的熔岩山丘寻找）  
-3，大堡礁地区200米到300米深，寻找踏浪者，它每走一步路就会凸起一个矿石，但是如果不拿矿石会再次沉下去消失。（boss踏浪者没有直接敌意属于中立生物，虽然移动非常慢，但是被踩到就直接丧生。）    
+
+
+1. 寻找巨大珊瑚管，整个世界好像就3处，  
+2. 海底沙漠，常见矿物很多（没有稀有矿，小心骨鲨）（稀有矿物去恶魔岛水下山壁，1200米深的熔岩山丘寻找）  
+3. 大堡礁地区200米到300米深，寻找踏浪者，它每走一步路就会凸起一个矿石，但是如果不拿矿石会再次沉下去消失。（boss踏浪者没有直接敌意属于中立生物，虽然移动非常慢，但是被踩到就直接丧生。）    
 
 ![游戏地图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/游戏地图.jpg)
 
 ![失落之河](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/失落之河.jpg)
+
+
+## 参考链接：
+
+1、[深海迷航全资源收集图文攻略 深海迷航资源位置详解](https://www.3dmgame.com/gl/3709451.html)  
+2、[百度知道-美丽水世界，独眼：MK1抗压到底怎么造](https://zhidao.baidu.com/question/1452584194836981500.html)
+
