修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -45,7 +45,21 @@ categories: 随笔
 
 ![游戏地图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/游戏地图.jpg)
 
+
+
+### 失落之河
+
+失落之河是后期重要的物资获取地点，也是剧情必经之路。
+
 ![失落之河](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/失落之河.jpg)
+
+## 生物蛋
+
+生物蛋孵化需要大型水族馆，直接丢里面，就会自己孵化。
+
+## 极光号门密码
+
+极光号内拥有大量水，电池，等物资，其中有五道密码门(其中两道门为实验室门密码一样)，密码分别为**1454、1869、2679、6483**；密码也可以通过PAD中的信息获取，感兴趣的可以自己解密下。
 
 
 ## 参考链接：
