--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -43,27 +43,46 @@ categories: 随笔
 2. 海底沙漠，常见矿物很多（没有稀有矿，小心骨鲨）（稀有矿物去恶魔岛水下山壁，1200米深的熔岩山丘寻找）  
 3. 大堡礁地区200米到300米深，寻找踏浪者，它每走一步路就会凸起一个矿石，但是如果不拿矿石会再次沉下去消失。（boss踏浪者没有直接敌意属于中立生物，虽然移动非常慢，但是被踩到就直接丧生。）    
 
+## 地图
+
+直接给两个网站，地图都是交互的，当然你要懂点英语。可以这么说，你在国内网站上看到的几乎所有的游戏地图都是出自这两个网站，当然它们加了个中文翻译。
+
+1、[在线互动地图](https://subnauticamap.io/)
+2、[深海迷航wiki-几乎所有地点、位置的坐标、介绍、图片都有](https://subnautica.fandom.com/wiki/Crater_Map)
+3、[貌似是地图mod](https://www.nexusmods.com/subnautica/mods/12)
+
+以下为主要的中文地图，都是高清的。
+
 ![游戏地图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/游戏地图.jpg)
 
-
+![游戏地图2](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/深海迷航攻略/深海迷航地图2.jpeg)
 
 ### 失落之河
 
 失落之河是后期重要的物资获取地点，也是剧情必经之路。
+失落之河有四个主要入口，具体位置请参考上面**地图**的第一个链接。
 
 ![失落之河](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/深海迷航攻略/失落之河.jpg)
 
 ## 生物蛋
 
+**图片待添加**
+
 生物蛋孵化需要大型水族馆，直接丢里面，就会自己孵化。
+
 
 ## 极光号门密码
 
 极光号内拥有大量水，电池，等物资，其中有五道密码门(其中两道门为实验室门密码一样)，密码分别为**1454、1869、2679、6483**；密码也可以通过PAD中的信息获取，感兴趣的可以自己解密下。
+
+## 通关指南
+
+[深海迷航速通流程攻略 美丽水世界快速通关指南](https://www.3dmgame.com/gl/3715867.html)
 
 
 ## 参考链接：
 
 1、[深海迷航全资源收集图文攻略 深海迷航资源位置详解](https://www.3dmgame.com/gl/3709451.html)  
 2、[百度知道-美丽水世界，独眼：MK1抗压到底怎么造](https://zhidao.baidu.com/question/1452584194836981500.html)
+3、[深海迷航失落之河全解图文攻略 失落之河坐标要点汇总](http://www.yxdown.com/gonglue/411624_1.html)
 
