--- a/_posts/2019-11-24-博客文章写作规范.md
+++ b/_posts/2019-11-24-博客文章写作规范.md
@@ -5,7 +5,7 @@ date:   2019-11-24  12:10
 categories: 办公
 ---
 
-> 未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)
+未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)
 
 ## 等待修改
 
