修改文件: _posts/2019-04-02-HTML&CSS-第1章-结构.md

--- a/_posts/2019-04-02-HTML&CSS-第1章-结构.md
+++ b/_posts/2019-04-02-HTML&CSS-第1章-结构.md
@@ -5,6 +5,8 @@ date:   2019-04-03 11:12
 categories: html&css
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 在生活中，我们每天都会面对各种各样的文档、报纸、医疗保单及商品目录等。  
 许多网页其实就像这些文档的电子版本。例如：报纸是以印刷品的形式向人们报道新闻，而这些新闻与刊登在网站上的新闻是一样的；你可以在网上申请购买保险；商店也有在线商品目录和相关的电子商务设施。  
 不论哪种文档，文档的结构都是非常重要的，它能帮助读者理解你所要传达的信息并对文档起到导航作用。而HTML正是对网页文档进行结构划分的语言。
