修改文件: _posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md

--- a/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
+++ b/_posts/2019-05-17-Arduino 1.8.9 和 VS code兼容乱码问题.md
@@ -5,6 +5,8 @@ date:   2019-05-17 20:12
 categories: arduino
 ---
  
+ **未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+ 
  近期Arduino推出了新版本1.8.9，兴奋的去官网进行了升级替换了老版本1.8.8。然后问题出现了：
  
  我是使用VS code + Arduino 进行Arduino开发的，VS code负责编写代码，然后调用Arduino进行编译和下载，具体实现方法请自行查找，教程很多。开始正题：
