--- a/_posts/2019-05-26-结构体使用前必须分配内存.md
+++ b/_posts/2019-05-26-结构体使用前必须分配内存.md
@@ -5,6 +5,8 @@ data: 2019-5-18 10:30
 categories: stm
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 最近再将原Keil5中的STM32工程移植到Atollic TrueSTDIO for STM32上，顺便使用STM32CubeMX简化初始化配置，减小工作量。更具体的原因则是涉及到版权和商业化问题，另外Keil所有版本的破解版都是2020年到期，我很慌啊。。。
 
 但移植就以为这一堆问题，工程文件配置什么的都好解决，今天遇到的是程序上的问题。那就是：结构体使用前必须分配内存
