修改文件: _posts/2019-08-29-电磁阀控制电路.md

--- a/_posts/2019-08-29-电磁阀控制电路.md
+++ b/_posts/2019-08-29-电磁阀控制电路.md
@@ -5,6 +5,8 @@ data: 2019-08-29 14:4
 categories: hardware
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 ## 电路图
 
 ![电磁阀电路图](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/电磁阀控制电路/电磁阀电路图.png)
