修改文件: _posts/2019-09-03-小书匠绑定第三方数据库.md

--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -5,6 +5,8 @@ data: 2019-11-24 13:51
 categories:  办公
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 ## 介绍
 
 绑定第三方数据库的意思就是你可以将第三方的文件夹链接到小书匠软件里，这样你在本地操作时，点击同步，数据就会实时上传到第三方数据库并更改，当然需要网络。而小书匠有个实时保存的功能，所以你可以离线编辑，再同步。
