修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -5,6 +5,8 @@ data: 2019-9-3 15:15
 categories:  办公
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 ## 自己需要改正的地方
 
 * 查看—**编写示例**
