修改文件: _posts/2019-09-05-kicad-嘉立创SMT生产经验.md

--- a/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
+++ b/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
@@ -5,6 +5,8 @@ data: 2019-9-5 17:55
 categories:  cad
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 原文：
 https://notes.glab.online/#/posts/4
 
