修改文件: _posts/2019-09-06-Win10新版输入法使用.md

--- a/_posts/2019-09-06-Win10新版输入法使用.md
+++ b/_posts/2019-09-06-Win10新版输入法使用.md
@@ -5,6 +5,8 @@ date:   2019-9-6  7:38
 categories:  办公
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 ## 模糊拼音
 
 模糊拼音通俗理解，就是当你有输错的拼音时，输入法会自动予以纠错，并给出正确的候选词。
