修改文件: _posts/2019-09-06-系统自学英语方法.md

--- a/_posts/2019-09-06-系统自学英语方法.md
+++ b/_posts/2019-09-06-系统自学英语方法.md
@@ -5,6 +5,8 @@ data: 2019-9-6 18:10
 categories:  随笔
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 课时1：确定英语级别
 
 从小学英语者，英语专业者的建议参考意义不大。
