修改文件: _posts/2019-09-10-串口屏使用笔记.md

--- a/_posts/2019-09-10-串口屏使用笔记.md
+++ b/_posts/2019-09-10-串口屏使用笔记.md
@@ -5,6 +5,7 @@ data: 2019-09-10 11:1
 categories:  hardware
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
 
 1、多条语句发送指令，最后在发送“\r\n”,（以其为结束）
 
