--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -5,12 +5,7 @@ data: 2019-9-12 16:23
 categories:  stm
 ---
 
-
-**本文作者：** LonlyPan  
-**本文链接：** [https://lonlypan.com/archivers/STM32F030-LL库使用笔记](https://lonlypan.com/archivers/STM32F030-LL库使用笔记)  
-**版权声明：** 本文遵循 [署名-非商业性使用-禁止演绎 4.0 国际](https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh) 协议。禁止用于商业用途，转载联系作者授权！
-
-----------
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
 
 ## 为什么用LL库
 
