修改文件: _posts/2019-09-12-小书匠语法使用手册.md

--- a/_posts/2019-09-12-小书匠语法使用手册.md
+++ b/_posts/2019-09-12-小书匠语法使用手册.md
@@ -5,6 +5,8 @@ data: 2019-11-23 16:23
 categories:  办公
 --- 
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 # 斜体
 
 对需要斜体的文字使用一个 '\*' 或者 '\_' 符号包裹，系统就会转换成斜体显示效果
