修改文件: _posts/2019-11-15-Youtube无字幕视频翻译.md

--- a/_posts/2019-11-15-Youtube无字幕视频翻译.md
+++ b/_posts/2019-11-15-Youtube无字幕视频翻译.md
@@ -5,6 +5,8 @@ data: 2019-11-15 10:30
 categories:  随笔
 ---
 
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
+
 1、打开Youtube，设置中字幕点击自动生成（测试了几个音频生成字幕的如网易见外工作台，aismartvip，speechlogger字幕生成的准确度和断句都不如youtube自带的好），只生成英文的，中文翻译过来的准确度差很多
 https://jianwai.netease.com/
 https://aismartvip.com/
