修改文件: _posts/2019-09-04-C学习.md

--- a/_posts/2019-09-04-C学习.md
+++ b/_posts/2019-09-04-C学习.md
@@ -2,8 +2,10 @@
 layout: post
 title: "C学习"
 data: 2019-9-4 18:6
-categories:  c&c++
+categories:  C&C++
 ---
+
+**未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
 
 ## 网易课堂-乐学偶的
 
