修改文件: _posts/2019-11-24-博客文章写作规范.md

--- a/_posts/2019-11-24-博客文章写作规范.md
+++ b/_posts/2019-11-24-博客文章写作规范.md
@@ -17,4 +17,6 @@ categories: 办公
 
 ## 格式
 
+版权声明：本文由 <a href="{{ site.url }}">{{ page.author }}</a> 在 {{ page.date | date:"%Y年%m月%d日" }}发表。本文采用<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh" target="_blank">CC BY-NC-SA 4.0</a>许可协议，非商业转载请注明出处，不得用于商业目的。
+
 
