修改文件: _posts/2019-11-19-J-Link SWD下载错误.md

--- a/_posts/2019-11-19-J-Link SWD下载错误.md
+++ b/_posts/2019-11-19-J-Link SWD下载错误.md
@@ -12,6 +12,7 @@ J-Link：淘宝购买的J-Link V9.5（非官方）
 软件IDE：Atmel Sudio 7
 下载模式：SWD三线（CLK，DIO，GND） 
 
+<!--more-->
 ## 错误类型
 
 以下皆为在**IDE**中单击**调试下载按钮 Debugging**之后，出现的**弹窗错误**。
