修改文件: _posts/2019-11-15-Youtube无字幕视频翻译.md

--- a/_posts/2019-11-15-Youtube无字幕视频翻译.md
+++ b/_posts/2019-11-15-Youtube无字幕视频翻译.md
@@ -10,6 +10,7 @@ https://jianwai.netease.com/
 https://aismartvip.com/
 https://speechlogger.appspot.com/zh/
 
+<!--more-->
 2、下载视频和自动生成的字幕
 下载视频：自行搜索，这个资源很多，我也是随便找的，能用就行
 https://www.findyoutube.net/
