修改文件: _posts/2019-11-03-深海迷航攻略.md

--- a/_posts/2019-11-03-深海迷航攻略.md
+++ b/_posts/2019-11-03-深海迷航攻略.md
@@ -13,6 +13,7 @@ categories: 随笔
 
 方法如下：打开游戏目录`Subnautica/SNAppData/SavedGames/slot0000`(这个编号是你建立游戏存档的顺序，找到你玩的那个存档)，把`CellsCache`和`CompiledOctreesCache`两个文件夹里的内容都删了，文件夹保留，再进入到游戏会发现整个世界都跟新的一样，但是你自己造的建筑不会被刷新掉，海娥号，机甲，独眼巨人号也都在，采集的资源也在箱子里边存着，但你扔在野外的物品会消失。
 
+<!--more-->
 ## 装备
 
 ### 潜水深度
