修改文件: _posts/2019-09-12-STM32F030 LL库使用笔记.md

--- a/_posts/2019-09-12-STM32F030 LL库使用笔记.md
+++ b/_posts/2019-09-12-STM32F030 LL库使用笔记.md
@@ -12,6 +12,8 @@ categories:  STM32
 下面是别人做的一个不同编程方式的效率对比：
 原文链接：[https://blog.csdn.net/super828/article/details/79078693](https://blog.csdn.net/super828/article/details/79078693)
 
+<!--more-->
+
 ![标准库与Cube,LL,直接写寄存器的效率对比](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/STM32F030_LL库使用笔记/标准库与Cube,LL,直接写寄存器的效率对比.png)
 
 
