修改文件: _posts/2019-09-06-Win10新版输入法使用.md

--- a/_posts/2019-09-06-Win10新版输入法使用.md
+++ b/_posts/2019-09-06-Win10新版输入法使用.md
@@ -11,6 +11,8 @@ categories:  办公
 
 在微软输入法的设置面板中，你能看到两个与之相关的开关，其中“智能模糊拼音”是由输入法自动识别输错的拼音串，而“模糊拼音”则将选择权交给用户，以防止一些特殊输入被输入法错误纠正。
 
+<!--more-->
+
 ![模糊拼音](https://www.github.com/LonlyPan/LonlyPan.github.io/raw/master/images/Posts/2019-09-06-Win10新版输入法使用/模糊拼音.png)
 
 ## u模式
