--- a/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
+++ b/_posts/2019-09-05-kicad-嘉立创SMT生产经验.md
@@ -14,6 +14,8 @@ https://notes.glab.online/#/posts/4
 
 1、原理图中原理图符号要正确的关联封装。也就是要填写正确的封装、还有元件的值。如封装：0805，值：10KΩ。
 
+<!--more-->
+
 2、关联封装的时候为了确保最后贴装正确，要确保你的封装是正确的。但是网上各种封装画得五花八门的，我就曾经被不标准的封装害的翻车，所以最好的是用嘉立创自己提供的封装库。同时一些带极性的元件，比如贴片LED灯，贴片开关二极管，也要确保正确的封装0度方向，所以为了确保万无一失，从设计之初就选择嘉立创的封装吧。点击下载：嘉立创Kicad封装库
 
 3、要能实现SMT贴装，你还需要通过Kicad导出gerber文件、BOM清单、元件位置文件。其中gerber文件导出可以放心的提交生产。而Kicad原生导出的BOM清单和元件位置文件不符合嘉立创的格式标准。这个可以用KiCAD生产文件生成器，直接生成符合嘉立创格式标准的BOM清单和元件位置文件。
