修改文件: _posts/2019-09-04-文档写作规范.md

--- a/_posts/2019-09-04-文档写作规范.md
+++ b/_posts/2019-09-04-文档写作规范.md
@@ -11,6 +11,8 @@ categories:  办公
 
 比如介绍写作规范的文档，可以命名为 `write-standard.md` 。
 
+<!--more-->
+
 ## 内容规范
 
 以简洁、直观地表达所述内容为目的，介绍性文档言简意赅介绍原理、架构、设计思路等，操作类文档写明关键步骤，以便能对其他开发者起到帮助。可以优先使用中文，建议中英文都支持。
