修改文件: _posts/2019-09-03-编码规范.md

--- a/_posts/2019-09-03-编码规范.md
+++ b/_posts/2019-09-03-编码规范.md
@@ -14,6 +14,7 @@ categories:  办公
 * 全局变量应增加”g_“前缀；静态增加”s_“前缀；类型名加前缀”P_“，全大写
 * 数值和字符串等等常量的定义，建议采用全大写字母，使用下划线”\_“连接
 * 定义函数时左花括号”{“单独占一行，其他的`if`、`while`、`for`等语句建议紧随其后
+<!--more-->
 * 组成switch、while、do...while 或for 结构体的语句应该是复合语句。即使该复合语句只包含一条语句也要扩在{}里
 * const、virtual、inline、case 等关键字之后至少要留一个空格；函数名之后不要留空格，紧跟左括号‘（’，以与关键字区别
 * 二元操作符：“=”、“+=” “>=”、“<=”、“+”、“\*”、“%”、“&&”、“\|\|”、“<<”,“^”等的前后应加空格
