--- a/_posts/2019-09-03-小书匠绑定第三方数据库.md
+++ b/_posts/2019-09-03-小书匠绑定第三方数据库.md
@@ -13,6 +13,7 @@ categories:  办公
 
 下面以GitHub为例，因为我的博客是基于GitHub的。
 
+<!--more-->
 ## 数据绑定
 
 1、首先在软件上点击 `小书匠` 图标，点击 `绑定`选项进入操作界面，选择 `数据存储-> github` 进入设置界面。这里可以看到，还可以绑定其他第三方，有的直接输入账号密码登录就可以，操作简单，自己选择吧。这里只谈GitHub。
