修改文件: _posts/2019-08-08-高达模型课堂-素组.md

--- a/_posts/2019-08-08-高达模型课堂-素组.md
+++ b/_posts/2019-08-08-高达模型课堂-素组.md
@@ -11,7 +11,7 @@ categories: 随笔
   1）单刃剪钳：一侧为平面，一侧为刃面，单侧剪切。效果上单刃更好，中间不会出现挤压。
   2）双刃剪钳：双刃面
 和剪切手法有关，熟练后效果类似
-
+<!--more-->
 2. 笔刀：初期修剪水口，修合模线，贴纸。后期改造
 3. 切割垫，保护桌面，A3较合适
 4. 锉刀或砂纸+打磨板，二选一，砂纸400-1000目打磨板选金属（薄）
