修改文件: _posts/2019-08-04-Arduino可穿戴运动监测设备 .md

--- a/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
+++ b/_posts/2019-08-04-Arduino可穿戴运动监测设备 .md
@@ -11,6 +11,8 @@ categories: arduino
 
 设计一款可穿戴设备，能够检测佩戴者是否处在运动或休息状态，从而能够在佩戴者长时间（30min）连续运动（步）后，提醒其饮水并适当休息（亮灯和串口打印提醒语句）；在长时间休息（60min）后，提醒其适当运动（灯闪烁和串口打印提醒语句）。
 
+<!--more-->
+
 ### 硬件设备：
 
 LilyPad Arduino 328 Main Board ，[资料链接](https://www.sparkfun.com/products/13342)  
