修改文件: _posts/2019-05-26-结构体使用前必须分配内存.md

--- a/_posts/2019-05-26-结构体使用前必须分配内存.md
+++ b/_posts/2019-05-26-结构体使用前必须分配内存.md
@@ -9,6 +9,8 @@ categories: stm
 
 但移植就以为这一堆问题，工程文件配置什么的都好解决，今天遇到的是程序上的问题。那就是：结构体使用前必须分配内存
 
+<!--more-->
+
 原Keil函数里使用用到结构体的，但我在一个函数中申明了它却没有申请内存，关建是编译没有错误和警告，而且实机测试也是成功的。而今天原模原样照搬到TrueSTDIO上，编译也是没有错误和警告的，但实机测试情况是能跑，但不正常。最后一点点在线调试，才发现是结构体的问题，遂申请内存空间，问题解决。最后为了解答心中疑惑，我又测试了一下：
 
 ## TrueSTDIO调试，出错输出信息：
