修改文件: _posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md

--- a/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
+++ b/_posts/2019-05-17-彻底删除vscode及安装的插件和个人配置信息.md
@@ -9,6 +9,7 @@ categories: software
 此贴完全复制粘贴，作为个人备份使用。感谢作者。
 
 1、卸载vscode应用软件（在控制面板里面找不到改软件，所以只能进入应用所在文件夹进行卸载）
+<!--more-->
 ![1](/images/Posts/201905171.png)
 
 此步骤虽然删掉了应用软件，但是此时重新安装会发现之前下载的插件和个人配置信息都还会重新加载出来，所以继续进行以下步骤：
