修改文件: _posts/2019-05-17-办公软件使用合集.md

--- a/_posts/2019-05-17-办公软件使用合集.md
+++ b/_posts/2019-05-17-办公软件使用合集.md
@@ -8,6 +8,8 @@ categories: 办公
 > 时间截至：2019.11.24
 > 注：部分软件可能需要搭梯子
 
+<!--more-->
+
 ## [小书匠](http://soft.xiaoshujiang.com/) 
 **收费：** ￥40/年
 **用例：** 编写技术文档和博客文章，Markdown语法，可导出为PDF或同步到Github上。
