--- a/_posts/2019-04-23-wps隐私问题.md
+++ b/_posts/2019-04-23-wps隐私问题.md
@@ -9,4 +9,5 @@ categories:  随笔
 wps文件会自动上传且不可关闭。  
 云文档删除可以批量删除，但是会保存到回收站，而且是永久的，并且你去删除时，无法多选或全选，得一个个删除，而且每删除一个文件都需要点击三次鼠标。
 
+<!--more-->
 >文章写于2019年4月23日，具有时效性，以上仅代表个人观点，可能有误。
