修改文件: _posts/2019-04-02-HTML&CSS-第1章-结构.md

--- a/_posts/2019-04-02-HTML&CSS-第1章-结构.md
+++ b/_posts/2019-04-02-HTML&CSS-第1章-结构.md
@@ -9,6 +9,7 @@ categories: html&css
 许多网页其实就像这些文档的电子版本。例如：报纸是以印刷品的形式向人们报道新闻，而这些新闻与刊登在网站上的新闻是一样的；你可以在网上申请购买保险；商店也有在线商品目录和相关的电子商务设施。  
 不论哪种文档，文档的结构都是非常重要的，它能帮助读者理解你所要传达的信息并对文档起到导航作用。而HTML正是对网页文档进行结构划分的语言。
 
+<!--more-->
 ## HTML描述页面的结构
 
 HTML描述页面的结构与一般的文档结构是一个道理。如下图所示，为了控制网页的结构，我们需要为显示在网页上的文字添加代码。HTML代码采用蓝色字体，将要显示在屏幕上的文本采用黑色字体。
