修改文件: _posts/2019-04-02-HTML&CSS-前言.md

--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -8,7 +8,7 @@ categories: html&css
 基于《HTML&CSS设计与构建网站》一书学习，按照文章目录结构，记录一些个人学习笔记和文章中的重要内容。
 
 # 本书的组织结构
-
+<!--more-->
 ## 1.HTML
 
 HTML负责创建网页，划分整个界面的结构和章节。涉及到标签和元素概念：文本、列表、链接、图像、表格、表单、Flash、视频、音频等。
