--- a/_posts/2019-09-04-C学习.md
+++ b/_posts/2019-09-04-C学习.md
@@ -12,7 +12,7 @@ categories:  C&C++
 1.Bell Labs，Dennis Ritchie，Ken thompson
 2.Unix
 3.Pascal，BASIC，C is POL（Programmers Oriented Language）
-
+<!--more-->
  2、why we choose C as our language to learn
 1）Good Side：
 One language to rule them all
