--- a/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
+++ b/_posts/2019-10-15-读书笔记-上帝掷骰子吗 量子物理史话.md
@@ -12,7 +12,7 @@ categories: 随笔
 ----------
 
 摘：1887年，赫兹的实验证实了电磁波的存在，也证实了光其实是电磁波的一种，两者具有共同的波的特性。  
-
+<!--more-->
 评：光属于电磁波?
 解：经典物理认为光是一种电磁波，没有粒子特性。书后的量子理论则认为光具有波粒二象性。  
 光由光子组成，光子是波色子，一种基本粒子，没有静质量。平常所见的光由大量光子组成，表现出波的性质，这就是波粒二象性。（不是说单个光子就没有波粒二象性了）。这种波就是电磁波。可见光波段在400-760nm。光的运动遵循最短光程原理，可以由路径积分来解释（参见费曼的科普书）
