修改文件: _posts/2019-11-24-博客文章写作规范.md

--- a/_posts/2019-11-24-博客文章写作规范.md
+++ b/_posts/2019-11-24-博客文章写作规范.md
@@ -11,6 +11,8 @@ categories: 办公
  - 文章页面分割线删除
  - 所有页面显示扩为全屏
 
+<!--more-->
+
 ## 著作权
 
 **未经授权，不得全文转载。转载前请先阅读[本站版权声明](https://lonlypan.com/archivers/版权声明)**
