--- a/_posts/2019-12-8-Jekyll网站添加【不蒜子】访问量统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加【不蒜子】访问量统计.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-12-8-Jekyll网站添加【不蒜子】访问量统计"
+title:    "Jekyll网站添加【不蒜子】访问量统计"
 date:   2019-12-8  12:57
 categories: HTML&CSS
 ---
