--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-12-8-Jekyll网站添加网站统计"
+title:    "Jekyll 网站添加网站统计"
 date:   2019-12-8  10:10 
 categories: 办公
 ---
