修改文件: _posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md

--- a/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
+++ b/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-12-8-Jekyll 网站添加文章更改日期显示"
+title:    "Jekyll 网站添加文章更改日期显示"
 date:   2019-12-8  13:31 
 categories: HTML&CSS
 ---
