修改文件: _posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md

--- a/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
+++ b/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
@@ -11,7 +11,7 @@ categories: HTML&CSS
 
 
 
-## 配置
+## 配置-Gem主题
 
 **官方网站：**[jekyll-last-modified-at](https://github.com/gjtorikian/jekyll-last-modified-at)
 
