修改文件: _posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md

--- a/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
+++ b/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
@@ -10,9 +10,11 @@ categories: HTML&CSS
 
 <!--more-->
 
+>以下教程只适用于使用Jekyll官方 **Gem** 主题的博客，对于自定义博客或使用 **Github Page** 的博客不适用
 
+>本博客采用的为：在每篇博客头数据新建一个**last_modified_at变量**，每次更新博文时手动修改该时间
 
-## 配置-Gem主题
+## 配置
 
 **官方网站：**[jekyll-last-modified-at](https://github.com/gjtorikian/jekyll-last-modified-at)
 
@@ -46,3 +48,9 @@ plugins:
 ```
 {{ page.last_modified_at | date: '%Y:%m:%d' }}
 ```
+
+
+## 参考链接
+
+1. [Adding last modified date to Jekyll](https://tomkadwill.com/adding-last-modified-date-to-jekyll)
+2. [Trying to include date page updated](https://talk.jekyllrb.com/t/trying-to-include-date-page-updated/1290)
