修改文件: _posts/2019-12-5-网站修改记录.md

--- a/_posts/2019-12-5-网站修改记录.md
+++ b/_posts/2019-12-5-网站修改记录.md
@@ -13,6 +13,7 @@ N：New 表示新增
 
 - 修改时间小时格式
 - 修改文章页面css格式（标题加粗，下划线）
+- 删除源主题评论相关文件内容
 - [N] 添加版权声明，新增copyright.html文件
 - [N] 所有文章增加 <!--more-->摘录，便于首页显示
 - [N] 新增谷歌分析、百度统计
