--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -18,7 +18,7 @@ categories: 办公
 2、在_include文件夹下中新建文件 `baidu-analytics.html` ,并加入以下代码。  
 **为了避免错误，建议读者直接复制本文中涉及的代码，文件名。**
 
-```html
+```c
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -32,13 +32,13 @@ categories: 办公
 
 3、在_include文件夹中的 head.html 文件中添加下面一行代码（放在在文末 **</head>** 标签之前）。 
 
-```html
-{% include google-analytics.html%}
+```c
+  {% include baidu-analytics.html%}
 ```
 
 4、最后修改_config.yml配置文件，加入下面代码（任意位置），这里就需要填你**自己的百度统计代码**
 
-```html
+```c
 baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 ```
 
@@ -68,36 +68,22 @@ baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 3、在_include文件夹下中新建文件 `google-analytics.html` ,并加入以下代码。  
 **为了避免错误，建议读者直接复制本文中涉及的代码，文件名。**
 
-```html
-<script>
+```c
+
+//<script>
     (function(e,t,n,i,s,a,c){e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)}
     ;a=t.createElement(i);c=t.getElementsByTagName(i)[0];a.async=true;a.src=s
     ;c.parentNode.insertBefore(a,c)
     })(window,document,"galite","script","https://cdn.jsdelivr.net/npm/ga-lite@2/dist/ga-lite.min.js");
-    galite('create', '{{ site.google_analytics}}', 'auto');  
+    //galite('create', '{{ site.google_analytics}}', 'auto');  
     galite('send', 'pageview');
-</script>
+//</script>
+
 ```
 
 这里的代码并不是官方推荐的代码，而是使用了 [ga-lite](https://github.com/jehna/ga-lite)，它的作用就是在使用谷歌分析的基础上，解决中国大陆加载速度的问题
 
 4、在_include文件夹中的 head.html 文件中添加下面一行代码（放在在文末 **</head>** 标签之前）。 
 
-```html
-{% include google-analytics.html%}
-```
+`{% include google-analytics.html%}`
 
-5、最后修改_config.yml配置文件，加入下面代码（任意位置），这里就需要填你**自己的谷歌跟踪ID**
-
-```html
-google_analytics: UA-154158357-1
-```
-
-6、本地和在线检查方式和上文相同，不在赘述。  
-另外你可以单击**跟踪ID**旁的 **发送测试流量** 来测试是否安装成功。
-
-
-## 参考链接
-
-1. [Jekyll搭建博客并添加百度统计](https://decodezero.cn/2016/10/25/Jekyll%E6%90%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2%E5%B9%B6%E6%B7%BB%E5%8A%A0%E7%99%BE%E5%BA%A6%E7%BB%9F%E8%AE%A1.html)
-2. [Jekyll 网站添加访问量统计分析](https://www.yuque.com/shenweiyan/cookbook/jekyll-add-page-view)
