--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -87,3 +87,17 @@ baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 
 `{% include google-analytics.html%}`
 
+5、最后修改_config.yml配置文件，加入下面代码（任意位置），这里就需要填你**自己的谷歌跟踪ID**
+
+```c
+google_analytics: UA-154158357-1
+```
+
+6、本地和在线检查方式和上文相同，不在赘述。  
+另外你可以单击**跟踪ID**旁的 **发送测试流量** 来测试是否安装成功。
+
+
+## 参考链接
+
+1. [Jekyll搭建博客并添加百度统计](https://decodezero.cn/2016/10/25/Jekyll%E6%90%AD%E5%BB%BA%E5%8D%9A%E5%AE%A2%E5%B9%B6%E6%B7%BB%E5%8A%A0%E7%99%BE%E5%BA%A6%E7%BB%9F%E8%AE%A1.html)
+2. [Jekyll 网站添加访问量统计分析](https://www.yuque.com/shenweiyan/cookbook/jekyll-add-page-view)
