--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -86,7 +86,7 @@ baidu_analytics: f56279d43c733d547ea06f75f8e05d89
 4、在_include文件夹中的 head.html 文件中添加下面一行代码（放在在文末 **</head>** 标签之前）。 
 
 ```c
-{% include google-analytics.html%}
+{% include baidu-analytics.html %}
 ```
 5、最后修改_config.yml配置文件，加入下面代码（任意位置），这里就需要填你**自己的谷歌跟踪ID**
 
