修改文件: _posts/2019-04-02-HTML&CSS-前言.md

--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -2,25 +2,36 @@
 layout: post
 title:  "HTML&CSS-前言"
 date:   2019-04-02 11:12
+last_modified_at:  2019-12-14 
 categories: html&css
 ---
 
-基于《HTML&CSS设计与构建网站》一书学习，按照文章目录结构，记录一些个人学习笔记和文章中的重要内容。
+这是自己学习《HTML&CSS设计与构建网站》一书的学习笔记，按照文章目录结构顺序，记录一些个人学习内容。
+**书本简介：** 全书有大量例程和图示，很适合这种网页设计学习，且教学循序渐进，值得一看。
 
-# 本书的组织结构
 <!--more-->
-## 1.HTML
 
-HTML负责创建网页，划分整个界面的结构和章节。涉及到标签和元素概念：文本、列表、链接、图像、表格、表单、Flash、视频、音频等。
+## 本书的组织结构
 
-## 2.CSS
+书本一共分三部分：
 
-CSS负责控制网页的显示样式和布局（各元素的位置，非整体结构）。涉及到属性概念：
+### 1.HTML
 
-* 表现：文本颜色和字体；设置字体大小、添加背景色及背景图像
-* 控制各元素在屏幕的位置，增强页面吸引力。
+- HTML语言负责**创建网页，划分整个界面的结构和章节。**
+- 涉及**标签**和**元素**概念：用于告诉浏览器文本中那些是标题，那些是段落，那些是图片等等。
+- 标签类型：文本、列表、链接、图像、表格、表单、Flash、视频、音频等。
 
-## 3.使用信息
+### 2.CSS
+
+- CSS语言负责**控制网页的显示样式和布局**，相当于美化排版。注意和HTML的区别：一个是为了能显示，一个是为了显示的更好看。
+- 涉及到**属性**概念：
+  - 表现属性：控制文本颜色和字体；设置字体大小、添加背景色及背景图像
+  - 布局属性：控制**HTML中各元素**在屏幕的位置
+
+>笔记：HTML语言也是有属性概念的：也可以控制文本的颜色，字体大小等，包括一部分排版功能，和CSS在功能上有些交叉。**但是：**  
+HTML的属性只能作用域局部，而网页设计它的排版通常会涉及到很多重复内容（比如文章标题通常是一样格式，用HTML就得在每个标题内容中重复书写），这时CSS就相当于将所有HTML中相同的属性抽出来统一在一起。所以在学习HTML时，**侧重了解其便签概念，即显示内容上，只要做到能显示即可。**
+
+### 3.实用信息
 
 HTML5中的新标签。创建新站点的过程，内容上传到网站、搜索引擎优化（SEO）以及分析工具来跟踪网站的访问者和访问目的。
 
