修改文件: _posts/2019-04-02-HTML&CSS-前言.md

--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -28,48 +28,48 @@ categories: html&css
   - 表现属性：控制文本颜色和字体；设置字体大小、添加背景色及背景图像
   - 布局属性：控制**HTML中各元素**在屏幕的位置
 
->笔记：HTML语言也是有属性概念的：也可以控制文本的颜色，字体大小等，包括一部分排版功能，和CSS在功能上有些交叉。**但是：**  
+>HTML语言也是有属性概念的：也可以控制文本的颜色，字体大小等，包括一部分排版功能，和CSS在功能上有些交叉。**但是：**  
 HTML的属性只能作用域局部，而网页设计它的排版通常会涉及到很多重复内容（比如文章标题通常是一样格式，用HTML就得在每个标题内容中重复书写），这时CSS就相当于将所有HTML中相同的属性抽出来统一在一起。所以在学习HTML时，**侧重了解其便签概念，即显示内容上，只要做到能显示即可。**
 
 ### 3.实用信息
 
-HTML5中的新标签。创建新站点的过程，内容上传到网站、搜索引擎优化（SEO）以及分析工具来跟踪网站的访问者和访问目的。
+- 介绍HTML5中的新标签。
+-  创建新站点应该遵循的涉及过程
+-  如何将内容上传到网站、构建搜索引擎优化（SEO）以及分析工具来跟踪网站的访问者和访问目的。
 
-# 如何访问网络
+## 如何访问网络
 
-## 浏览器
+### 浏览器
 
-访问网站是用到的软件称为WEB浏览器。比较流行的有Firefox、IE、Chrome、Safari和Opera。
+访问网站时用到的软件称为WEB浏览器。比较流行的有Firefox、IE、Chrome、Safari和Opera。
 
-浏览器会定期更新以增加新特性并支持语言新增的规范。但并非所有用户运行的都是最新版，也就不能使用最新功能。因此你需要知道访问者使用了那种浏览器，将在19章学习。
+### WEB服务器
 
-## WEB服务器
+是一种特殊的始终联网的计算机，专门用来托管网站，用来像请求者发送网页。
 
-当用浏览器访问网络是，这个请求通过Internet被发送到一台特殊的计算机，成为WEB服务器，专门用来托管网站。是一种特殊的始终联网的计算机，专门用来像请求者发送网页。
-
-## 屏幕阅读器
+### 屏幕阅读器
 
 用来将计算机屏幕上的内容读给用户的程序，用于具有视觉障碍的人。因此本书中涉及屏幕阅读器的提示，有助于确保使用此类软件得人也能访问你的网站。
 
-# 如何创建网站
+## 如何创建网站
 
-## 你所看到的
+### 你所看到的
 
-当你浏览网站时，浏览器会从托管此网站的WEB服务器上接受HTML和CSS，然后解释这些代码并渲染成你所看到的。（网页实际是一连串的代码，你看到的一切其实是浏览器将代码解释得图像和文字）。有网站会用到JavaScript（不是Java，完全不同语言）或Flash，属于更高级别的内容，放在HTML和CSS学习之后。
+当你浏览网站时，浏览器会从托管此网站的WEB服务器上接受HTML和CSS，然后解释这些代码并渲染成你所看到的。（网页实际是一连串的代码，你看到的一切其实是浏览器将代码解释得图像和文字）。有的网站会用到JavaScript（不是Java，完全不同语言）或Flash，属于更高级别的内容，放在HTML和CSS之后学习。
 
-## 如何创建它
+### 如何创建它
 
-小型网站使用HTML和CSS足够。更大、更复杂的会使用数据库来存储如PHP、ASP.Net、Java或Ruby等编程语言。
+小型网站使用HTML和CSS足够。更大、更复杂的会使用数据库来存储，并在服务器端使用如PHP、ASP.Net、Java或Ruby等编程语言。
 
-## HTM5和CSS3
+### HTM5和CSS3
 
-仍在开发中，但许多浏览器已经支持新特性。
+我们本书所要学习的内容，目前仍在开发中，但许多浏览器已经支持新特性。
 
-# 网络访问机制
+## 网络访问机制
 
 当你访问一个网站时，托管此网站的WEB服务器可能位于世界的任何位置，为了能够找到这台服务器位置，浏览器首先会连接到一个域名系统（DNS）服务器。  
-1.你通过Internet服务提供商（ISP）连接到网络，并通过浏览器输入域名或网址来访问网站。例如：google.com  
-2.你的计算机连接到一个称为域名系统的服务器网络。DNS类似于电话簿存储姓名对应的号码，存储域名对应的IP地址，然后告诉你的计算机，  
-3.DNS返回的IP地址能让浏览器连接到托管所要访问的的WEB服务器。WEB服务器是一台始终联网的计算机，专门用来向用户发送网页。  
-4.最后，WEB服务器将请求的页面发送到你的浏览器中。浏览器解释代码，显示成网页形式。
+1. 你通过Internet服务提供商（ISP）连接到网络，并通过浏览器输入域名或网址来访问网站。例如：google.com  
+2. 然后你的计算机会连接到一个称为域名系统（DNS）的服务器网络。DNS类似于电话簿存储姓名（网址）对应的号码（IP地址：即存放你要访问的那个网站的Web服务器地址），然后告诉你的计算机， 
+3. 返回的IP地址能让你电脑上的浏览器连接到所要访问的的WEB服务器。 
+4. 最后，WEB服务器将请求的页面发送到你的浏览器中。浏览器解释代码，显示成网页形式。
 
