修改文件: _posts/books/2019-12-14-HTML&CSS 设计与构建网站.md

--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -11,7 +11,7 @@ publishdate: "出版日期：2017-8"
 pages: "480"
 bookimg: "/images/Posts/2019-12-14-HTML&CSS:_设计与构建网站/HTML&CSS_设计与构建网站.jpg"
 doubanurl: "https://book.douban.com/subject/10541306/ 豆瓣书单地址"
-readdate: "阅读日期2019-12-"
+readdate: "2019-12-"
 booktag: "网页制作"
 stars: "★★★★★ " 
 review: "系统讲述到了关于HTML和CSS的相关基础知识，运用大量图片代替枯燥的语言，加上精美的排版，不仅很好的讲述了这门设计语言，还能够激发初学者的阅读兴趣，同时配有大量实例进行练习，是一本对于初学者很友好的工具类丛书。"
