修改文件: _posts/books/2019-12-14-HTML&CSS 设计与构建网站.md

--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -5,7 +5,7 @@ date:   2019-12-14  10:2
 last_modified_at:  2019-12-14 
 isbook: true
 author: "[美]Jon Duckett"
-translator: "刘涛，陈学敏"
+translator: "刘涛、陈学敏"
 press: "清华大学出版社"
 publishdate: "出版日期：2017-8"
 pages: "480"
