修改文件: _posts/2019-04-02-HTML&CSS-第1章-结构.md

--- a/_posts/2019-04-02-HTML&CSS-第1章-结构.md
+++ b/_posts/2019-04-02-HTML&CSS-第1章-结构.md
@@ -3,7 +3,7 @@ layout: post
 title:  "HTML&CSS-第1章-结构"
 date:   2019-04-03 11:12
 last_modified_at:  2019-12-14
-categories: html&css
+categories: web
 ---
 
 网页其实就像各种各样的文档、报纸、医疗保单及商品目录这些文档的电子版本。例如：报纸是以印刷品的形式向人们报道新闻，而这些新闻与刊登在网站上的新闻是一样的。  
