修改文件: _posts/2019-04-02-HTML&CSS-前言.md

--- a/_posts/2019-04-02-HTML&CSS-前言.md
+++ b/_posts/2019-04-02-HTML&CSS-前言.md
@@ -3,7 +3,7 @@ layout: post
 title:  "HTML&CSS-前言"
 date:   2019-04-02 11:12
 last_modified_at:  2019-12-14 
-categories: html&css
+categories: web
 ---
 
 这是自己学习《HTML&CSS设计与构建网站》一书的学习笔记，按照文章目录结构顺序，记录一些个人学习内容。
