修改文件: _posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md

--- a/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
+++ b/_posts/2019-12-8-Jekyll 网站添加文章更改日期显示.md
@@ -3,7 +3,7 @@ layout: post
 title:    "Jekyll 网站添加文章更改日期显示"
 date:   2019-12-8  13:31 
 last_modified_at:  2019-12-8
-categories: HTML&CSS
+categories: web
 ---
 
 每篇博客的头数据都有一个 `data` 变量，表示文章的发布日期；可有时我们也希望显示文章的修改日期，保持更新状态。一个办法是再增加一个时间变量，每次修改文章时，手动更改该时间。但这次我们将使用一款插件自动获取文章修改日期并显示出来。
