修改文件: _posts/2019-12-8-Jekyll网站添加【不蒜子】访问量统计.md

--- a/_posts/2019-12-8-Jekyll网站添加【不蒜子】访问量统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加【不蒜子】访问量统计.md
@@ -2,7 +2,7 @@
 layout: post
 title:    "Jekyll 网站添加【不蒜子】访问量统计"
 date:   2019-12-8  12:57
-categories: HTML&CSS
+categories: web
 ---
 
 “不蒜子”与百度统计、谷歌分析等有区别：“不蒜子”可直接将访问次数显示在您在网页上（也可不显示）；对于已经上线一段时间的网站，“不蒜子”允许您初始化首次数据。
