修改文件: _posts/2019-12-8-Jekyll网站添加网站统计.md

--- a/_posts/2019-12-8-Jekyll网站添加网站统计.md
+++ b/_posts/2019-12-8-Jekyll网站添加网站统计.md
@@ -2,7 +2,7 @@
 layout: post
 title:    "Jekyll 网站添加网站统计"
 date:   2019-12-8  10:10 
-categories: 办公
+categories: web
 ---
 
 网站统计能够提供实时的流量质量和访客行为分析，助力日常监控，为系统优化、提升投资回报率等目标提供指导。可实时多维分析、人群细分，行为洞察，实现数据驱动业务增长。其实就相当于你网站的一个大数据分析。
