--- a/_posts/2019-04-02-HTML&CSS-第1章-结构.md
+++ b/_posts/2019-04-02-HTML&CSS-第1章-结构.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "HTML&CSS-第1章-结构"
+title:  "HTML&CSS-第1章 结构"
 date:   2019-04-03 11:12
 last_modified_at:  2019-12-14
 categories: web
