--- a/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
+++ b/_posts/books/2019-12-14-HTML&CSS 设计与构建网站.md
@@ -9,7 +9,7 @@ translator: "刘涛、陈学敏"
 press: "清华大学出版社"
 publishdate: "出版日期：2017-8"
 pages: "480"
-bookimg: "/images/Posts/2019-12-14-HTML&CSS:_设计与构建网站/HTML&CSS_设计与构建网站.jpg"
+bookimg: "/images/Posts/2019-12-14-HTML&CSS 设计与构建网站/HTML&CSS_设计与构建网站.jpg"
 doubanurl: "https://book.douban.com/subject/6585090/"
 readdate: "2019-12-"
 booktag: "网页制作"
