修改文件: _posts/2019-12-14-HTML&CSS-第2章 文本.md

--- a/_posts/2019-12-14-HTML&CSS-第2章 文本.md
+++ b/_posts/2019-12-14-HTML&CSS-第2章 文本.md
@@ -37,8 +37,8 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 ## 空元素
 
 空元素指只含有单个标签的元素，注意斜线前有一个空格（没有也没事，编码习惯）。如：
-- <br />：表示回车
-- <hr />：表示水平线
+- \<br />：表示回车
+- \<hr />：表示水平线
 
 ## 引用
 
