修改文件: _posts/2019-12-14-HTML&CSS-第2章 文本.md

--- a/_posts/2019-12-14-HTML&CSS-第2章 文本.md
+++ b/_posts/2019-12-14-HTML&CSS-第2章 文本.md
@@ -42,13 +42,13 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 
 ## 引用
 
-表示引用了一段或一句别人的话，名言。 \<blockquote>表示一长段引用，通常会显示整段缩进。\<q>表示短引用，之间的内容会自动添加双引号。
+表示引用了一段或一句别人的话，名言。 \<blockquote> 表示一长段引用，通常会显示整段缩进。\<q> 表示短引用，之间的内容会自动添加双引号。
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/quote.png)
 
 ## 缩写词
 
-缩写词表示这之间的文本是缩写形式，如果你使用 title 属性制定了原词，则当鼠标停留在该缩写词上时，浏览器会自动显示原词内容。  
+缩写词表示这之间的文本是缩写形式，如果你使用 title 属性指定了原词，则当鼠标停留在该缩写词上时，浏览器会自动显示原词内容。  
 \<abbr> 和 \<acronym> 完全相同，所以在 HTML5 中只保留使用 \<abbr> 
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第2章_文本/abbr.png)
@@ -63,10 +63,10 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 
 | 元素  | 含义 | 元素 | 含义 |
 | ----- | ---- | ---- | ---- |
-| \<b>   |  粗体    |   \<strong>   |   表示重要   |
-| \<i>   |   斜体   |   \<em>   |   强调   |
-| \<sup> |   上标   |  \<address>    |   设计者信息   |
-| \<sub> |   下标   |   \<ins>   |    插入内容，带下划线  |
+| \<b>   |  粗体    |   \<strong>   |   表示重要，有粗体效果   |
+| \<i>   |   斜体   |   \<em>   |   强调，有斜体效果   |
+| \<sup> |   上标   |  \<address>    |   设计者的信息   |
+| \<sub> |   下标   |   \<ins>   |    插入的内容，带下划线  |
 | \<del>   |  删除的内容，带删除线  |   \<s>  |   不准确或不应该却不应当删除的内容，带中间删除|
 
 ## 结构化标记和语义化标记
@@ -77,5 +77,5 @@ HTML标题一共有六个级别，h 即 heading 的首字母
 - [对HTML语义化的一些理解和记录](https://juejin.im/post/5ae029bcf265da0b7155f15d)
 - [Difference between Structural and Semantic markup anyone?](https://www.reddit.com/r/computerscience/comments/8cer6c/difference_between_structural_and_semantic_markup/)
 
-综合上述两文的内容，结构化就是代表结构划分的标记，而语义化则表示通俗易懂的标记，在自己看来，并无区分的必要，都看作标记（标签）即可。  
-深入的理解就是在日后的网页设计中，我们的 HTML 代码应更趋向于语义化，即能让人一样就看明白这其中的内容属于什么结构和类型，而不是完全自定义。其实本章所提的标签基本都属于该范畴。
+综合上述两文的内容，结构化就是代表结构划分的标记，而语义化则表示通俗易懂的标记。在自己看来，并无区分的必要，都看作标记（标签）即可。  
+深入的理解就是在日后的网页设计中，我们的 HTML 代码应更趋向于语义化，即能让人一眼就看明白这其中的内容属于什么结构和类型，而不是完全自定义。其实本章所提的标签基本都属于该范畴。
