修改文件: _posts/2019-12-14-HTML&CSS-第2章 文本.md

--- a/_posts/2019-12-14-HTML&CSS-第2章 文本.md
+++ b/_posts/2019-12-14-HTML&CSS-第2章 文本.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:    "2019-12-14-HTML&CSS-第2章 文本"
+title:    "HTML&CSS-第2章 文本"
 date:   2019-12-14  12:17 
 last_modified_at:  2019-12-14 
 categories: web
