修改文件: _posts/2019-12-14-HTML&CSS-第3章 列表.md

--- a/_posts/2019-12-14-HTML&CSS-第3章 列表.md
+++ b/_posts/2019-12-14-HTML&CSS-第3章 列表.md
@@ -13,11 +13,12 @@ categories: HTML&CSS
 
 ## 有序列表
 
-列表中的每个项目都按顺序标有标号，表示按一定步骤，注意方式属于列表，显示上都会有一定的缩进，后同。
+列表中的每个项目都按顺序标有标号，表示按一定步骤。  
+注意凡是属于列表，显示上都会有一定的缩进，后同。
 
 \<ol> 表示创建一个有序列表，\<li> 表示列表项目（一行内容）
 
-显示效果见无序列表内。
+显示效果见**无序列表**内。
 
 ## 无序列表
 
@@ -31,7 +32,7 @@ categories: HTML&CSS
 
 定义专业术语的列表
 
-\<dl> 表示创建一个定义列表，\<dt> 表示被定义的术语，\<dd> 表示被具体定义。一个术语可以有多个定义，反之也可。
+\<dl> 表示创建一个定义列表，\<dt> 表示被定义的术语，\<dd> 表示被、具体定义。一个术语可以有多个定义，反之也可。
 
 ![dfnlist](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-14-HTML&CSS-第3章_列表/dfnlist.png)
 
