修改文件: _posts/2019-12-5-网站修改记录.md

--- a/_posts/2019-12-5-网站修改记录.md
+++ b/_posts/2019-12-5-网站修改记录.md
@@ -16,7 +16,7 @@ N：New 表示新增
 - 删除源主题评论相关文件内容
 - [N] 添加版权声明，新增copyright.html文件
 - [N] 所有文章增加 <!--more-->摘录，便于首页显示
-- [N] 新增谷歌分析、百度统计
+- [N] 新增谷歌分析（已删除）、百度统计
 - [N] 新增不蒜子访问量统计和显示
 - [N] 添加书单页面
 
