--- a/_posts/2019-12-14-HTML&CSS-第3章 列表.md
+++ b/_posts/2019-12-14-HTML&CSS-第3章 列表.md
@@ -3,7 +3,7 @@ layout: post
 title:    "HTML&CSS-第3章 列表"
 date:   2019-12-14  15:20 
 last_modified_at:  2019-12-14 
-categories: HTML&CSS
+categories: web
 ---
 
 本章节介绍三种列表的使用：
