修改文件: _posts/2019-12-15-HTML&CSS-第4章 链接.md

--- a/_posts/2019-12-15-HTML&CSS-第4章 链接.md
+++ b/_posts/2019-12-15-HTML&CSS-第4章 链接.md
@@ -14,9 +14,74 @@ categories: web
 
 ## 链接编写
 
-链接是由 \<a> 元素建立的，其间添加属性 href 来指点链接的地址，中间的内容是显示出来供读者点击实现跳转的。一般默认，该段文字会显示为蓝色并带有下划线。
+链接是由 \<a> 元素建立的，其间添加属性 href 来指点链接的地址（属性及属性值要写在起始标签中），中间的内容是显示出来供读者点击实现跳转的。一般默认，该段文字会显示为蓝色并带有下划线。
 
 链接的显示文字应尽量表达清楚要跳转到何处，而至于让读者困惑。
 
 ![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第4章_链接/link.png)
 
+
+## 指向其他网站的链接
+
+如果希望添加其他网站的链接，只需要把属性值设为该网站的网址（域名）即可，如：http://wwww.xxx.com ，但记住一定要使用绝对地址。
+
+## 同一网站中其他页面的链接
+
+当链接时指向统一网站中其他页面或内容时，一般采用较短的相对地址。及不需要网站和域名。
+相对地址同时对于在本地建立网站时很有用，不依赖于网络环境。
+
+下面将详述何为相对地址。
+
+### 目录结构和URL
+
+#### 目录结构
+
+通常较大的网站，都会采用不同类别的文件夹来保存相应的网站文件。称之为目录。  
+下图是一个网站的目录结构。
+
+![enter description here](https://raw.githubusercontent.com/LonlyPan/LonlyPan.github.io/master/images/Posts/2019-12-15-HTML&CSS-第4章_链接/struture.png)
+
+**结构**
+最顶端的文件夹称为根文件夹（图中examplearts文件夹），根文件夹包含了网站中其他所有的文件夹及文件。
+
+**关系**
+文件于文件之间的关系是使用家谱关系的术语来描述的，如图中所示。
+
+
+**主页**
+主页其实就是最主要的网页界面（首页则是其中最重要的一页，一般都是进入网站看到的第一页界面），主页一般是同一类型内容的引导界面，所以通常命名为 index.html。同一网站可以有不同的主页。
+
+如果我们输入网站中某个文件夹的地址并进入，浏览器会优先打开该文件夹下的 index.html 文件并显示（如果指定了文件则打开指定文件）。所以当我们输入一个网站的网址时，其实是打开了根目录下的 index.html 文件。
+
+#### URL 
+
+URL：Uniform Resource Locator（统一资源定位器，即地址）。每个网页都有自己的 URL。
+- 绝对URL：域名 + 文件路径
+- 相对 URL：只有文件路径
+
+| 相对链接类型      | 示例（依据上图）                                                                           |
+| ------------------------------- | -------------------------------------- |
+| 相同的文件夹
+要链接到同一文件夹内的文件，只需使用文件名（其余都不需要） | 从 music 主页链接到 music 板块中的 review 页面：
+<a href = "review.html">Reviews</a>       |
+| 子文件夹
+对于子文件夹，使用子文件夹名后面加**正斜杠**再加文件名的形式   | 从网站主页链接到 music 板块中的 listings 页面：
+<a href = "music/listings">Listings</a>    |
+| 孙子文件夹
+子文件夹名，加正斜杠，加孙子文件夹名，加正斜杠，再加文件名   | 从网站主页链接到 DVD 板块中的 review 页面：
+<a href = "movies/dvd/review.html">Reviews</a> |
+| 父文件夹
+使用 ../ 来表示当前文件夹的上一级文件夹，然后再加上文件名      | 从music 板块中的 review 页面链接到网站主页：
+<a href = "../index.html">Home</a>            |
+| 祖父文件夹
+重复 ../ 表示你要到达上面两级文件夹，然后加上文件名          | 从 DVD 板块中的 review 页面链接到网站主页：                                                |
+|                                                                         |                                                                                            |
+
+
+
+
+### 链接到页面中的特定位置
+
+### 链接到其他页面的特定位置
+
+## 邮件链接
