修改文件: _posts/2019-12-15-HTML&CSS-第4章 链接.md

--- a/_posts/2019-12-15-HTML&CSS-第4章 链接.md
+++ b/_posts/2019-12-15-HTML&CSS-第4章 链接.md
@@ -12,6 +12,8 @@ categories: web
 - 在页面之间建立链接
 - 电子邮件链接
 
+<!--more-->
+
 # 链接编写
 
 链接是由 \<a> 元素建立的，其间添加属性 href 来指点链接的地址（属性及属性值要写在起始标签中），中间的内容是显示出来供读者点击实现跳转的。一般默认，该段文字会显示为蓝色并带有下划线。
